# pxlib-and-pxview

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
pxlib/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  pxlib.pc.in  pxlib.spec
pxlib/doc/: Makefile.am  Makefile.in
pxlib/include/: Makefile.am  Makefile.in  paradox-gsf.h  paradox-gsf.h.in  paradox.h  paradox.h.in  pxversion.h  pxversion.h.in
pxlib/src/: Makefile.am  Makefile.in  paradox.c  px_head.c  px_head.h  px_memprof.c  px_misc.c  px_misc.h
pxview/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  pxview.spec  pxview.spec.in
pxview/doc/: Makefile.am  Makefile.in  px2csv.sgml  px2html.sgml  px2sql.sgml  px2sqlite.sgml  pxview.sgml
pxview/po/: de.po
pxview/src/: Makefile.am  Makefile.in  main.c
